--- a/tox.ini
+++ b/tox.ini
@@ -39,3 +39,11 @@ commands =
     pipenv run mypy --ignore-missing-imports --follow-imports=skip --strict-optional {toxinidir}/setup.py
     pipenv run mypy --ignore-missing-imports --follow-imports=skip --strict-optional {toxinidir}/src/fortlit/__init__.py
     pipenv run mypy --ignore-missing-imports --follow-imports=skip --strict-optional {toxinidir}/src/fortlit/lit_time.py
+
+[testenv:pex]
+basepython = python3.6
+whitelist_external = /bin/bash
+deps =
+    pex
+commands =
+    /bin/bash -c "pex . -e fortlit:entrypoint -o {toxinidir}/dist/fortlit-`uname -s`-`uname -m`.pex -v"
