--- a/tox.ini
+++ b/tox.ini
@@ -1,49 +1,68 @@
 [tox]
-envlist = py36, flake8, pylint, mypy
+envlist = py36, py37, flake8, pylint, mypy
+isolated_build = true
 
 [testenv]
-deps =
-    pipenv
+whitelist_externals = poetry
 commands =
-    pipenv install --dev
-    pipenv run pytest
+    poetry install -v
+    poetry run pytest -sv
 
 [testenv:flake8]
-basepython = python3.6
-deps =
-    pipenv
+basepython = python3.7
+whitelist_externals = poetry
 commands =
-    pipenv install --dev
-    pipenv run flake8 {toxinidir}/setup.py
-    pipenv run flake8 {toxinidir}/src/fortlit/__init__.py
-    pipenv run flake8 {toxinidir}/src/fortlit/lit_time.py
-    pipenv run flake8 {toxinidir}/tests/test_lit_time.py
+    poetry install -v
+    poetry run flake8 {toxinidir}/src/fortlit/
+    poetry run flake8 {toxinidir}/tests/
 
 [testenv:pylint]
-basepython = python3.6
-deps =
-    pipenv
+basepython = python3.7
+whitelist_externals =
+    /bin/sh
+    poetry
 commands =
-    pipenv install --dev
-    pipenv run pylint --rcfile={toxinidir}/setup.cfg {toxinidir}/setup.py
-    pipenv run pylint --rcfile={toxinidir}/setup.cfg {toxinidir}/src/fortlit/__init__.py
-    pipenv run pylint --rcfile={toxinidir}/setup.cfg {toxinidir}/src/fortlit/lit_time.py
-    pipenv run pylint --rcfile={toxinidir}/setup.cfg {toxinidir}/tests/test_lit_time.py
+    poetry install -v
+    /bin/sh -c "poetry run pylint --rcfile={toxinidir}/setup.cfg {toxinidir}/src/fortlit/*.py"
+    /bin/sh -c "poetry run pylint --rcfile={toxinidir}/setup.cfg {toxinidir}/tests/*.py"
 
 [testenv:mypy]
-basepython = python3.6
-deps =
-    pipenv
+basepython = python3.7
+whitelist_externals =
+    /bin/sh
+    poetry
 commands =
-    pipenv install --dev
-    pipenv run mypy --ignore-missing-imports --follow-imports=skip --strict-optional {toxinidir}/setup.py
-    pipenv run mypy --ignore-missing-imports --follow-imports=skip --strict-optional {toxinidir}/src/fortlit/__init__.py
-    pipenv run mypy --ignore-missing-imports --follow-imports=skip --strict-optional {toxinidir}/src/fortlit/lit_time.py
+    poetry install -v
+    /bin/sh -c "poetry run mypy --ignore-missing-imports --follow-imports=skip --strict-optional {toxinidir}/src/fortlit/*.py"
 
-[testenv:pex]
-basepython = python3.6
-whitelist_external = /bin/bash
-deps =
-    pex
+[testenv:formatting]
+basepython = python3.7
+whitelist_externals = poetry
 commands =
-    /bin/bash -c "pex . -e fortlit:entrypoint -o {toxinidir}/dist/fortlit-`uname -s`-`uname -m`.pex -v"
+    poetry install -v
+    poetry run black src/
+    poetry run black tests/
+    poetry run isort -rc src/
+    poetry run isort -rc tests/
+
+[testenv:black-only-check]
+basepython = python3.7
+whitelist_externals = poetry
+commands =
+    poetry install -v
+    poetry run black --check src/
+    poetry run black --check tests/
+
+[testenv:shiv-py36]
+basepython = python3.6
+deps = shiv
+whitelist_externals = /bin/sh
+commands =
+    sh -c "shiv $TOX_PACKAGE -o {toxinidir}/dist/fortlit-py36-`uname -s`-`uname -m`.pyz -e fortlit:entrypoint -p '/usr/bin/env python3'"
+
+[testenv:shiv-py37]
+basepython = python3.7
+deps = shiv
+whitelist_externals = /bin/sh
+commands =
+    sh -c "shiv $TOX_PACKAGE -o {toxinidir}/dist/fortlit-py37-`uname -s`-`uname -m`.pyz -e fortlit:entrypoint -p '/usr/bin/env python3'"
