--- a/.drone.yml
+++ b/.drone.yml
@@ -63,6 +63,16 @@ steps:
       - sudo apk add --no-cache gcc musl-dev
       - tox -v -e black-only-check
 
+  - name: shiv
+    image: xsteadfastx/tox-python:minimal
+    pull: true
+    environment:
+      TOX_WORK_DIR: /tmp/tox
+    commands:
+      mkdir dist/
+      tox -v -e shiv-py36
+      tox -v -e shiv-py37
+
   - name: publish
     image: plugins/github-release
     settings:
