--- a/.drone.yml
+++ b/.drone.yml
@@ -69,9 +69,9 @@ steps:
     environment:
       TOX_WORK_DIR: /tmp/tox
     commands:
-      mkdir dist/
-      tox -v -e shiv-py36
-      tox -v -e shiv-py37
+      - mkdir dist/
+      - tox -v -e shiv-py36
+      - tox -v -e shiv-py37
 
   - name: publish
     image: plugins/github-release
