--- a/.drone.yml
+++ b/.drone.yml
@@ -63,13 +63,20 @@ steps:
       - sudo apk add --no-cache gcc musl-dev
       - tox -v -e black-only-check
 
+  - name: sdist and wheel
+    image: xsteadfastx/tox-python:minimal
+    pull: true
+    commands:
+      - mkdir -p dist/
+      - poetry build
+
   - name: shiv
     image: xsteadfastx/tox-python:minimal
     pull: true
     environment:
       TOX_WORK_DIR: /tmp/tox
     commands:
-      - mkdir dist/
+      - mkdir -p dist/
       - tox -v -e shiv-py36
       - tox -v -e shiv-py37
 
